# AttendanceApp

./: .gitignore  README.md
auth/: pyproject.toml
auth/src/: app.py  raw.py
crypto/: pyproject.toml
crypto/hash/: app.py
crypto/jwt/: example.py
crypto/tls/: Makefile  certificate.crt  client.py  private.key  server.py
html/: table.html  table_live_code.html  table_old.html  table_task.html
server/: Makefile  README.md  db.json  practic.py  pyproject.toml
server/markup/: verbose_rooter.py
server/src/: __main__.py  __main___.py  app.py  db.py
server/test/: conftest.py  test_app.py  test_db.py
